Fix issues raised in smoke tests